[gd_scene load_steps=4 format=3 uid="uid://bb02d6qe3f5go"]

[ext_resource type="Theme" uid="uid://ddip2yriujj48" path="res://theme.tres" id="1_3e5gm"]
[ext_resource type="Script" path="res://sell.gd" id="1_q1g5w"]
[ext_resource type="Texture2D" uid="uid://cuxfb0gktab5d" path="res://my_assets/coffee.png" id="2_ctq74"]

[node name="Sell" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3e5gm")
script = ExtResource("1_q1g5w")

[node name="SellContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -51.0
offset_right = 100.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 51)

[node name="MarginContainer" type="MarginContainer" parent="SellContainer"]
layout_mode = 2
theme_override_constants/margin_top = 34
theme_override_constants/margin_bottom = 34

[node name="HBoxContainer" type="HBoxContainer" parent="SellContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Label" type="Label" parent="SellContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sell: "

[node name="TextureRect" type="TextureRect" parent="SellContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("2_ctq74")
expand_mode = 3

[node name="PriceLabel" type="Label" parent="SellContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "--"

[connection signal="mouse_entered" from="SellContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="SellContainer" to="." method="_on_panel_container_mouse_exited"]
